--- a/LinkDev.Talabat.Dashboard/Views/_ViewImports.cshtml
+++ b/LinkDev.Talabat.Dashboard/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using LinkDev.Talabat.Dashboard
 @using LinkDev.Talabat.Dashboard.Models
+@using Microsoft.AspNetCore.Identity
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
