--- a/LinkDev.Talabat.Dashboard/Views/_ViewImports.cshtml
+++ b/LinkDev.Talabat.Dashboard/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using LinkDev.Talabat.Dashboard
 @using LinkDev.Talabat.Dashboard.Models
 @using Microsoft.AspNetCore.Identity
+@using LinkDev.Talabat.Core.Application.Abstraction.Models.Auth
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
