--- a/LinkDev.Talabat.Dashboard/Views/_ViewImports.cshtml
+++ b/LinkDev.Talabat.Dashboard/Views/_ViewImports.cshtml
@@ -2,5 +2,6 @@
 @using LinkDev.Talabat.Dashboard.Models
 @using Microsoft.AspNetCore.Identity
 @using LinkDev.Talabat.Core.Application.Abstraction.Models.Auth
-
+@using LinkDev.Talabat.Core.Domain.Contracts.Persistence
+@using LinkDev.Talabat.Core.Domain.Entities.Products
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
