--- a/LinkDev.Talabat.Dashboard/Views/Product/CreateEditPartialView.cshtml
+++ b/LinkDev.Talabat.Dashboard/Views/Product/CreateEditPartialView.cshtml
@@ -25,14 +25,14 @@
     <span asp-validation-for="Price" class="text-danger"></span>
 </div>
 <div class="form-group">
-    <label asp-for="ProductBrand" class="col-form-label"></label>
-    <select class="form-control" asp-for="ProductBrandId" asp-items="Brands">
+    <label asp-for="Brand" class="col-form-label"></label>
+    <select class="form-control" asp-for="BrandId" asp-items="Brands">
         <option value="@null">-- Select Brand --</option>
     </select>
 </div>
 <div class="form-group">
-    <label asp-for="ProductCategory" class="col-form-label"></label>
-    <select class="form-control" asp-for="ProductTypeId" asp-items="Types">
+    <label asp-for="Category" class="col-form-label"></label>
+    <select class="form-control" asp-for="CategoryId" asp-items="Types">
         <option value="@null">-- Select Type --</option>
     </select>
 </div>
