Fix Products (Use specification design Pattern)

--- a/LinkDev.Talabat.Dashboard/Views/Product/Index.cshtml
+++ b/LinkDev.Talabat.Dashboard/Views/Product/Index.cshtml
@@ -32,8 +32,8 @@
                         <td>@Product.Name</td>
                         <td>@Product.Description</td>
                         <td>@Product.Price.ToString("C")</td>
-                        <td>@Product.Brand?.Name ?? "N/A"</td>
-                        <td>@Product.Category?.Name ?? "N/A"</td>
+                        <td>@Product.Brand?.Name </td>
+                        <td>@Product.Category?.Name </td>
                         <td>
                             <br />
                             <div class="d-flex">
